# 3P-Agentic-Frameworks

a2a-protocol/a2a-advisory-trading/: .env.example  .gitignore  PR_DESCRIPTION.md  README.md  STREAMLIT_README.md  pyproject.toml  streamlit_app.py
a2a-protocol/a2a-advisory-trading/docs/main/: development_guide.md  solution_deployment.md
